--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
             {parse_transform, lager_transform}]}.
 
 
-{require_otp_vsn, "R14B04|R15|R16"}.
+{require_otp_vsn, "R14B04|R15|R16|17|18"}.
 
 {cover_enabled, true}.
 
